// Copyright (C) 2018 ContentBox authors
//
// This file is part of the go-contentbox library.
//
// the go-contentbox library is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// the go-contentbox library is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with the go-contentbox library.  If not, see <http://www.gnu.org/licenses/>.
//

syntax = "proto3";

package netsyncpb;

import "github.com/BOXFoundation/boxd/core/pb/block.proto";

message LocateHeaders {
    // n, n-1, ... n-k, n-k-2, n-k-5, n-k-10, ... n-k-(2^m+m), ... genesis
    repeated bytes hashes = 1;
}

message SyncHeaders {
    repeated bytes hashes = 1;
}

message CheckHash {
    bytes begin_hash = 1;    // begin hash
    uint32 length = 2;
}

message SyncCheckHash {
    // it is a root hash for headers between start header and end header
    bytes root_hash = 1;
}

message FetchBlocksHeaders {
    repeated bytes hashes = 1;
}

message SyncBlocks {
    repeated corepb.Block blocks = 1;
}
